fix line-height of keyword cutting off text, move keywords below Description and above Content

--- a/src/components/work/keywords/Keywords.module.css
+++ b/src/components/work/keywords/Keywords.module.css
@@ -55,7 +55,7 @@
 
 .keyword.large h1 {
   font-size: var(--pt5);
-  line-height: var(--pt6);
+  line-height: var(--pt7);
 }
 
 /**
